fix tests and remove target golder